# OpenGL-Texture-Example

./: .gitignore  CMakeLists.txt  README.MD  conanfile.py  main.cpp
classes/: Camera.cpp  Camera.h  Light.cpp  Light.h  Mesh.cpp  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Window.cpp  Window.h  utils.cpp
headers/: Mesh.h
shaders/: shader.frag  shader.vert
